# UTA-Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  package-lock.json  package.json  pyproject.toml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: eslint.config.js  index.html  package.json
docs/: api.md  architecture.md  database.md  desktop-packaging.md  development-status.md  testing-and-recovery.md
docs/design/: phase-0-design-system.md  phase-1-design-system.md
migrations/: env.py
migrations/versions/: 20260718_0001_initialize_database.py  20260718_0002_real_conversations.py  20260718_0003_tool_executions.py  20260718_0004_survival_ledger.py  20260718_0005_realtime_memory.py  20260718_0006_cognitive_memory.py  20260718_0007_skill_evolution.py  20260719_0008_desktop_model_defaults.py
packaging/: survival-agent-api.spec
scripts/: build-sidecar.ps1
services/: __init__.py  desktop_sidecar.py
services/agent/: model_provider.py  runtime.py  tool_runtime.py  usage_normalizer.py
services/memory/: __init__.py  cognitive.py  formal.py  realtime_delta.py
services/skills/: __init__.py  service.py
services/survival/: __init__.py  ledger.py  quality_feedback.py  reward.py
tests/backend/: conftest.py  test_cognitive_memory.py  test_conversations.py  test_database.py  test_desktop_sidecar.py  test_health.py  test_memory.py  test_model_provider.py  test_phase8_stability.py  test_skill_evolution.py  (+3 more)
(+50 files in other folders)
