[project]
name = "survival-agent"
version = "0.1.0"
description = "Local-first survival-driven AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2.7.0",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
