[package]
name = "survival-agent-desktop"
version = "0.1.0"
description = "Local desktop shell for Survival Agent"
authors = ["Survival Agent contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "survival_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
